# koa

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLI_REFACTORING.md  Cargo.toml  KNOWN_ISSUES.md  Koa.toml  LICENSE  LICENSE-MIT  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/koa/: Cargo.toml
crates/koa-cli/: Cargo.toml  build.rs
crates/koa-cli/src/: main.rs
crates/koa-cli/src/commands/: build.rs  doctor.rs  init.rs  mod.rs  run.rs
crates/koa-runtime/: Cargo.toml  README.md
crates/koa-runtime/src/: async_.rs  async_runtime.rs  io.rs  lib.rs
crates/koa-runtime/src/alloc/: mod.rs
crates/koa-runtime/src/gc/: mod.rs
crates/koa/src/: lib.rs
crates/koa/src/ast/: mod.rs
crates/koa/src/ir/: lower.rs  mod.rs  types.rs
crates/koa/src/lexer/: mod.rs  token.rs
crates/koa/src/llvm_gen/: mod.rs
crates/koa/src/parser/: mod.rs  parser.rs
crates/koa/src/typeck/: checker.rs  mod.rs  symbol.rs
crates/koa/tests/: enum_debug_tests.rs  enum_tests.rs  enum_usage_tests.rs  generics_tests.rs  interface_satisfaction_tests.rs  ir_tests.rs  lexer_tests.rs  llvm_gen_tests.rs  llvm_generics_tests.rs  monomorphization_tests.rs  parser_tests.rs  typeck_tests.rs
docs/: 01-introduction.md  02-syntax-guide.md  03-type-system.md  04-error-handling.md  05-memory-management.md  06-concurrency.md  07-modules.md  08-conditional-compilation.md  09-standard-library.md  10-implementation-plan.md  11-package-manager.md  12-database-drivers.md  13-ffi.md  14-hmr.md  15-cross-compilation.md  16-build-system.md  16-stdlib-architecture.md  17-ffi-clarification.md  17-lockfile-spec.md  18-build-cache.md  19-project-init.md  20-architecture-decisions.md  21-cli-reference.md  SUMMARY.md
examples/: demo.koa  factorial.koa  fibonacci_simple.koa  hello.koa  hello_puts.koa  hello_world.koa  import_hello.koa  import_print.koa  simple.koa  struct_minimal_v3.koa
examples/basic/: Koa.toml  README.md
examples/basic/src/: main  main.koa  main.ll
examples/simple/: builtin_print.koa  calc.koa  demo.koa  factorial.koa  fibonacci_simple.koa  hello.koa  named_import.koa
std/: io.koa
