[workspace]
resolver = "2"
members = [
    "crates/koa",
    "crates/koa-cli",
    "crates/koa-runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Koa Contributors"]
license = "MIT"
repository = "https://github.com/riipandi/koa"

[workspace.dependencies]
# LLVM
inkwell = { version = "0.6", features = ["llvm17-0"] }
llvm-sys = "170"

# Parser
lalrpop = { version = "0.20", features = ["lexer"] }
lalrpop-util = "0.20"

# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
miette = { version = "7.2", features = ["fancy"] }

# Async/Concurrency
tokio = { version = "1.35", features = ["full"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Testing
criterion = "0.5"
