[workspace]
members = [
    "crates/koa",
    "crates/koa-cli",
    "crates/koa-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Koa Authors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/riipandi/koa"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
which = "6.0"
colored = "2.0"
anyhow = "1.0"
walkdir = "2.4"
# Downgrade to inkwell 0.4.0 and llvm15-0 for stability/crates.io availability
inkwell = { version = "0.4.0", features = ["llvm15-0"] }
lalrpop-util = "0.20"
miette = { version = "5.10", features = ["fancy"] }
criterion = "0.5"
tokio = { version = "1.35", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
