[workspace]
members = [
    "crates/koa",
    "crates/koa-cli",
    "crates/koa-runtime",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Koa Authors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/riipandi/koa"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
criterion = "0.5"
inkwell = { version = "0.4.0", features = ["llvm15-0"] }
lalrpop-util = "0.20"
miette = { version = "5.10", features = ["fancy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
toml = "0.8"
walkdir = "2.4"
which = "6.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
