[package]
name = "koa-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "koa"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
which.workspace = true
colored.workspace = true
anyhow.workspace = true
walkdir.workspace = true
koa = { path = "../koa" }
