[package]
name = "koa-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "koa"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
inquire = "0.7"
koa = { path = "../koa" }
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
which.workspace = true
